[gd_scene load_steps=14 format=3 uid="uid://br65rimie4kcl"]

[ext_resource type="Script" uid="uid://bdcei3b1kbb8i" path="res://scripts/ui/card/card_slot/card_slot_norm/card_slot_norm.gd" id="1_mgrbe"]
[ext_resource type="Texture2D" uid="uid://hvvk2fdgo3pw" path="res://assets/image/ui/ui_card/SeedBank.png" id="2_6irry"]
[ext_resource type="Script" uid="uid://dh1fkeo6gppr5" path="res://scripts/ui/card/card_slot/card_slot_norm/card_slot_battle.gd" id="3_073h5"]
[ext_resource type="Texture2D" uid="uid://dw6btivnki0kt" path="res://assets/image/ui/ui_card/SeedPacketSilhouette.png" id="4_iq6sw"]
[ext_resource type="Texture2D" uid="uid://bgy071auro307" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Background.png" id="5_ek8kr"]
[ext_resource type="Script" uid="uid://r3tnwf8ta1p5" path="res://scripts/ui/card/card_slot/card_slot_norm/card_slot_candidate.gd" id="6_13mad"]
[ext_resource type="Texture2D" uid="uid://bb6ohgnxwvi02" path="res://assets/image/ui/ui_card/SeedChooser_Button2.png" id="7_6x7kl"]
[ext_resource type="Texture2D" uid="uid://qdi7snnimhh0" path="res://assets/image/ui/ui_card/SeedChooser_Button2_Glow.png" id="8_w4c6e"]
[ext_resource type="BitMap" uid="uid://bxyj17qxinwq6" path="res://assets/image/ui/ui_card/SeedChooser_Button2_Mask.png" id="9_oo5b1"]
[ext_resource type="Script" uid="uid://parybxg7tb1k" path="res://scripts/ui/PVZ_button_base.gd" id="10_heup1"]
[ext_resource type="Texture2D" uid="uid://b1fuu1s6nfxnq" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Button_Glow.png" id="11_l50va"]
[ext_resource type="Texture2D" uid="uid://gy84wwo8bimw" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Button_Glow2.png" id="12_1n7fa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x628s"]
texture = ExtResource("2_6irry")
texture_margin_left = 78.0
texture_margin_top = 10.0
texture_margin_right = 12.0
texture_margin_bottom = 10.0

[node name="CardSlotNorm" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_mgrbe")

[node name="CardSlotBattle" type="PanelContainer" parent="."]
layout_mode = 2
offset_top = -100.0
offset_right = 140.0
offset_bottom = -10.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_x628s")
script = ExtResource("3_073h5")

[node name="SunLabelControl" type="Control" parent="CardSlotBattle"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CurrSunValue" type="Label" parent="CardSlotBattle/SunLabelControl"]
layout_mode = 2
offset_left = -101.0
offset_top = 51.0
offset_right = 14.0
offset_bottom = 79.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "999990"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardUiList" type="HBoxContainer" parent="CardSlotBattle"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = 0

[node name="CardPlaceholder_ori" type="TextureRect" parent="CardSlotBattle/CardUiList"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardSlotCandidate" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 600.0
offset_right = 465.0
offset_bottom = 1113.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_ek8kr")
script = ExtResource("6_13mad")

[node name="LastPageButton" type="TextureButton" parent="CardSlotCandidate"]
layout_mode = 0
offset_left = 300.0
offset_top = 1.0
offset_right = 370.0
offset_bottom = 31.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_6x7kl")
texture_pressed = ExtResource("8_w4c6e")
texture_click_mask = ExtResource("9_oo5b1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("10_heup1")

[node name="Label" type="Label" parent="CardSlotCandidate/LastPageButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0.431373, 0, 1)
theme_override_font_sizes/font_size = 15
text = "上一页"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextPageButton" type="TextureButton" parent="CardSlotCandidate"]
layout_mode = 0
offset_left = 380.0
offset_top = 1.0
offset_right = 450.0
offset_bottom = 31.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_6x7kl")
texture_pressed = ExtResource("8_w4c6e")
texture_click_mask = ExtResource("9_oo5b1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("10_heup1")

[node name="Label" type="Label" parent="CardSlotCandidate/NextPageButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0.431373, 0, 1)
theme_override_font_sizes/font_size = 15
text = "下一页"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainerPlant" type="GridContainer" parent="CardSlotCandidate"]
layout_mode = 0
offset_left = 13.0
offset_top = 32.0
offset_right = 450.0
offset_bottom = 449.0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 0
columns = 8

[node name="CardPlaceholder" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder2" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder3" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder4" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder5" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder6" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder7" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder8" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder9" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder10" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder11" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder12" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder13" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder14" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder15" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder16" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder17" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder18" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder19" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder20" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder21" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder22" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder23" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder24" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder25" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder26" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder27" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder28" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder29" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder30" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder31" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder32" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder33" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder34" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder35" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder36" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder37" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder38" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder39" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder40" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder41" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder42" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder43" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder44" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder45" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder46" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder47" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder48" type="TextureRect" parent="CardSlotCandidate/GridContainerPlant"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="GridContainerZombie" type="GridContainer" parent="CardSlotCandidate"]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 32.0
offset_right = 450.0
offset_bottom = 449.0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 0
columns = 8

[node name="CardPlaceholder" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder2" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder3" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder4" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder5" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder6" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder7" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder8" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder9" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder10" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder11" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder12" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder13" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder14" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder15" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder16" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder17" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder18" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder19" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder20" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder21" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder22" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder23" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder24" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder25" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder26" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder27" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder28" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder29" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder30" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder31" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder32" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder33" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder34" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder35" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder36" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder37" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder38" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder39" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder40" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder41" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder42" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder43" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder44" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder45" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder46" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder47" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="CardPlaceholder48" type="TextureRect" parent="CardSlotCandidate/GridContainerZombie"]
layout_mode = 2
texture = ExtResource("4_iq6sw")

[node name="TextureButton" type="TextureButton" parent="CardSlotCandidate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = 202.5
offset_right = 72.5
offset_bottom = 244.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_l50va")
texture_pressed = ExtResource("12_1n7fa")
texture_hover = ExtResource("12_1n7fa")
script = ExtResource("10_heup1")

[node name="ReCardButton" type="TextureButton" parent="CardSlotCandidate"]
layout_mode = 0
offset_left = 327.5
offset_top = 467.0
offset_right = 438.5
offset_bottom = 498.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_6x7kl")
texture_pressed = ExtResource("8_w4c6e")
texture_click_mask = ExtResource("9_oo5b1")
script = ExtResource("10_heup1")

[node name="Label" type="Label" parent="CardSlotCandidate/ReCardButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 105.0
offset_bottom = 25.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0.431373, 0, 1)
theme_override_font_sizes/font_size = 15
text = "重选上次卡片"

[node name="TemporaryCard" type="Control" parent="."]
z_index = 50
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="CardSlotCandidate/LastPageButton" to="CardSlotCandidate" method="_on_last_page_button_pressed"]
[connection signal="pressed" from="CardSlotCandidate/NextPageButton" to="CardSlotCandidate" method="_on_next_page_button_pressed"]
[connection signal="pressed" from="CardSlotCandidate/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CardSlotCandidate/ReCardButton" to="." method="_on_re_card_button_pressed"]
